--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/AsignarTareas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/AsignarTareas.cshtml
@@ -346,6 +346,9 @@
                                 <a class="nav-link active" id="asignaciones-tab" data-toggle="tab" href="#asignaciones" role="tab" aria-controls="main" aria-selected="true">Asignaciones</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" id="historial-tab" data-toggle="tab" href="#historial" role="tab" aria-controls="historial" aria-selected="false">Historial Asignaciones</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" id="rechazos-tab" data-toggle="tab" href="#rechazos" role="tab" aria-controls="rechazos" aria-selected="false">Rechazar Solicitud</a>
                             </li>
                             <li class="nav-item">
@@ -354,9 +357,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" id="detalles-tab" data-toggle="tab" href="#detalles" role="tab" aria-controls="detalles" aria-selected="false">Detalles de la Solicitud</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" id="historial-tab" data-toggle="tab" href="#historial" role="tab" aria-controls="historial" aria-selected="false">Historial Asignaciones</a>
-                            </li>
+
                         </ul>
                         <div class="tab-content" id="myTabContent">
 
@@ -1090,35 +1091,21 @@
                                         }
                                     </div>
                                 </div>
-
                                 @*Finaliza acordeon*@
                                 <!-- FIN TAB 4 -->
                             </div>
 
-                            <div class="tab-pane fade" id="historial" role="tabpanel" aria-labelledby="historial-tab">
+                            <div class="tab-pane fade" id="historial" role="tabpanel" aria-labelledby="historial-tab" style="height: 400px;">
                                 <!-- INICIO TAB 5 -->
                                 <button id="zoomInButton" onclick="zoomIn()" class="btn btn-info float-right"><i class="fa-solid fa-plus"></i></button>
                                 <button id="zoomOutButton" onclick="zoomOut()" class="btn btn-info float-right"><i class="fa-solid fa-minus"></i></button>
                                 <div id="container" style="height: 350px;"></div>
-
                                 <!-- FIN TAB 5 -->
                             </div>
                         </div>
                     </div>
-
-
-
-
                 </div>
-
-
-
-
-
-
             </div>
-
-
             <div>
                 <br />
                 <a href="@Url.Action("Index", ViewBag.ControllerName)" class="btn btn-round btn-info btm-sm" title="Volver">
@@ -1711,13 +1698,15 @@
                     data: { isSelected: isSelected, idDepartamento: id_ck, idSolicitud: @Model.id },
                     success: function (data) {
                         try {
+                         
                             if (data.length > 0) {
-
+                                
                                 //une los dos arrays de informacion
-                                var allData = [...hot.getData(), ...data];
+                                var allData = [...hotCorreos.getData(), ...data];
 
+                                console.log(allData)
                                 /*   console.log(allData);*/
-                                hot.loadData(allData);
+                                hotCorreos.loadData(allData);
                                 DeshabilitaCeldasComentario();
                             }
                         }
@@ -1807,7 +1796,7 @@
             const data = [
             ];
 
-            hot = new Handsontable(container, {
+            hotCorreos = new Handsontable(container, {
                 data: data,
                 autoWrapRow: true,
                 colHeaders: ['id_departamento','id_empleado','id_asignacion_user_departamento', 'Tipo', '¿Notificar?','Departamento', 'Planta', 'Nombre', 'Email', 'Tipo Usuario', 'Comentario' ],
@@ -2003,7 +1992,7 @@
         function EnviaFormulario() {
 
             //maneja el envió el del formulario               let $form = $(this).closest('form');
-            hot.validateCells((valid) => {
+            hotCorreos.validateCells((valid) => {
                 if (valid) {
                     const swalWithBootstrapButtons = Swal.mixin({
                         customClass: {
@@ -2030,7 +2019,7 @@
                                     dataType: "json",
                                     contentType: 'application/json; charset=utf-8',
                                     url: '/SCDM_solicitud/AsignarTareasForm?id=' +@Model.id,
-                                    data: JSON.stringify(hot.getData()),
+                                    data: JSON.stringify(hotCorreos.getData()),
                                     success: function (data) {
                                         try {
 
