--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/Create.cshtml
@@ -171,7 +171,7 @@
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.justificacion, htmlAttributes: new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                 <div class="col-md-6 col-sm-6">
-                                    @Html.TextAreaFor(model => model.justificacion, new { @class = "form-control", @rows = "3", @autocomplete = "off", @required = "required" })
+                                    @Html.TextAreaFor(model => model.justificacion, new { @class = "form-control", @rows = "3", @autocomplete = "off" })
                                     @Html.ValidationMessageFor(model => model.justificacion, "", new { @class = "text-danger" })
                                 </div>
                             </div>
