--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditFacturacion.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditFacturacion.cshtml
@@ -310,12 +310,12 @@
                                 }
                             </div>
                         </div>
-                        <div class="col-md-2">
+                        @*<div class="col-md-2">
                             <div class="ln_solid"></div>
                             <a onclick="save()" class="btn btn-success btn-lg" title="Generar macro" style="background-color: #1D6F42; color:white">
                                 <i class="fa-regular fa-file-excel"></i> Generar Macro
                             </a>
-                        </div>
+                        </div>*@
                         <div class="col-md-10">
                             <div class="ln_solid"></div>
                             <button type="button" id="btn-submit-salir" class="btn btn-info btn-lg float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
