--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditListaTecnica.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditListaTecnica.cshtml
@@ -340,7 +340,7 @@
                                                     <i class="fa-regular fa-square-plus"></i>
                                                     Agregar nueva fila
                                                 </button>
-                                                <button class="btn btn-danger btn-sm float-right" onclick="borrarFila()">
+                                                <button class="btn btn-danger btn-sm float-left" onclick="borrarFila()">
                                                     <i class="fa-regular fa-trash-can"></i>
                                                     Borrar fila seleccionada
                                                 </button>
