2024-10-08 Se agregan métricas a SCDM.

--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/Edit.cshtml
@@ -51,6 +51,7 @@
                             @Html.HiddenFor(model => model.id_solicitante)
                             @Html.HiddenFor(model => model.activo)
                             @Html.HiddenFor(model => model.on_hold)
+                            @Html.HiddenFor(model => model.viewUser)
 
                             <div class="form-group row">
                                 <div class="col-md-12" style="text-align:center">
