--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/AsignarTareas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/AsignarTareas.cshtml
@@ -346,6 +346,9 @@
                                 <a class="nav-link active" id="asignaciones-tab" data-toggle="tab" href="#asignaciones" role="tab" aria-controls="main" aria-selected="true">Asignaciones</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" id="rechazos-tab" data-toggle="tab" href="#rechazos" role="tab" aria-controls="rechazos" aria-selected="false">Historial de Rechazos</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" id="historial-tab" data-toggle="tab" href="#historial" role="tab" aria-controls="historial" aria-selected="false">Historial Asignaciones</a>
                             </li>
                             <li class="nav-item">
@@ -538,6 +541,37 @@
 
                                 </table>
                                 <!-- FIN TAB 1 -->
+                            </div>
+                            <div class="tab-pane fade" id="rechazos" role="tabpanel" aria-labelledby="rechazos-tab">
+                                <!-- INICIO TAB 2 -->
+                                @if (Model.SCDM_solicitud_asignaciones.Where(x => x.id_rechazo != null).Count() == 0)
+                                {
+                                    <div class="col-sm-12">
+                                        <div class="alert alert-info" role="alert">
+                                            Esta solicitud no tiene rechazos.
+                                        </div>
+                                    </div>
+                                }
+                                else
+                                {
+                                    foreach (var rechazo in Model.SCDM_solicitud_asignaciones.Where(x => x.id_rechazo != null).OrderByDescending(x => x.fecha_rechazo))
+                                    {
+                                        <div class="col-sm-12" style="padding-top:12px;">
+                                            <div class="alert alert-2-secondary">
+                                                <p><b>Fecha de rechazo:</b> @Html.DisplayFor(model => rechazo.fecha_rechazo)</p>
+                                                <p><b>Motivo de rechazo:</b> @Html.DisplayFor(model => rechazo.SCDM_cat_motivo_rechazo.descripcion)</p>
+                                                <p>
+                                                    <b>Rechazado por:</b> @Html.DisplayFor(model => rechazo.empleados2.ConcatNombre)
+                                                    (@Html.DisplayFor(model => rechazo.SCDM_cat_departamentos_asignacion.descripcion))
+                                                </p>
+                                                <p><b>Comentario de rechazo:</b> @Html.DisplayFor(model => rechazo.comentario_rechazo)</p>
+
+                                            </div>
+                                        </div>
+
+                                    }
+                                }
+                                <!-- FIN TAB 2 -->
                             </div>
                             <div class="tab-pane fade" id="rechazos" role="tabpanel" aria-labelledby="rechazos-tab">
                                 <!-- INICIO TAB 2 -->
